# rust_os

./: .gitignore  Makefile  env.bat
boot/: boot_sect.asm
boot/disk/: disk_load.asm  test_disk.asm
boot/pm/: gdt.asm  print_string_pm.asm  switch_to_pm.asm
boot/print/: print_hex.asm  print_string.asm  test_print_hex.asm
disk/: disk.asm
drivers/: screen.c  screen.h
kernel/: kernel.c  kernel_entry.asm  low_level.c
rust_kernel/: Cargo.toml
rust_kernel/old/src/: main.rs  vga_buffer.rs
rust_kernel/src/: gdt.rs  lib.rs
